fix alignment on partner images

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -408,6 +408,11 @@ footer {
 .instructor-title {
   font-style: italic;
 }
+
+// Partners
+.img-partner {
+  display: inline-block;
+}
 // Extras
 // -- Highlight Color Customization
 ::selection {
